# otus10hw4

./: .travis.yml  CMakeLists.txt  Doxyfile  README.md  _r_e_a_d_m_e_8md.html  _r_e_a_d_m_e_8md_source.html  annotated.html  annotated_dup.js  classes.html  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  files.js  fn__print__ip_8h.html  fn__print__ip_8h__dep__incl.map  fn__print__ip_8h__dep__incl.md5  fn__print__ip_8h__incl.map  fn__print__ip_8h__incl.md5  fn__print__ip_8h_source.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  hierarchy.html  hierarchy.js  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.map  inherit_graph_2.md5  (+87 more)
include/: fn_print_ip.h  mylib_print_tuple.h  praddr.h  praddr_basefncl.h  version.h.in
src/: CMakeLists.txt  praddr.cpp  praddr_basefncl.cpp  version.cpp
test/: CMakeLists.txt  testall.cpp
